--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css" type="text/css" />
-  <title>Trello</title>
+  <title>Collapse</title>
 </head>
 
 <body>
   <div id="container">
-    <button type="button" class="btn">Collapse</button>
+    <!-- <button type="button" class="btn">Collapse</button>
     <div class="open-text">
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi laborum sequi incidunt! Dicta deleniti aperiam porro! Quod repudiandae fugiat ipsum odit sunt suscipit, aut, magni illum, beatae doloremque harum illo.</p>
         
-    </div>
+    </div> -->
   </div>
   <script src="../src/js/app.js" type="module"></script>
 </body>
